# retriever

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pixi.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_issue.yml  runtime_feature.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
data_spec/: mock_write_tool.py  read_tool.py
docs/: API.md  README.md  architecture.md  concepts_lineage.md  contributing.md  examples.md  guide_debugging.md  guide_dev.md  guide_execution.md  guide_flow.md  guide_runtime.md  guide_temporal.md  handbook.md  hub.md  index.md  quickstart.md  release_readiness.md  types_standard.md  website_story.md
docs-site/: DEPLOY.md  DESIGN.md  README.md  astro.config.mjs  package-lock.json  package.json
docs-site/public/: llms.txt  robots.txt
docs/deployment/: cloudflare_pages.md
docs/ecosystem/: composable_pipelines.md  modules.md  publishing.md
docs/getting_started/: install.md  quickstart.md  tutorials.md  visual_quickstart.md
docs/guides/: advanced_zero_copy.md  data_eventstream_v1.md  data_spec_eventstream.md  data_spec_isolation_v1.md  debugging.md  development.md  flow_typing_standard.md  language_types_v1.md  perception_types_v1.md  robotics_typing.md  robotics_typing_carryback_status.md  spatial_types_v1.md  symbolic_types_v1.md  type_composition_v1.md  type_surface_status_v1.md
docs/stylesheets/: extra.css
docs/tutorials/: index.md  notebook_ready.md  track_a_flow_fundamentals.md  track_b_ir_and_execution.md  track_c_debug_and_replay.md  track_d_closed_loop_state_feedback.md  track_e_resource_and_sync.md  track_f_policy_backends.md  track_g_operations_interfaces.md  track_h_release_readiness.md  tutorial_integrated_debug_to_release.md  walkthrough_core_release_path.md  walkthrough_stepper_debug_and_replay.md
examples/: README.md  __init__.py  control_demo.py
examples/hub/: _composable_pipeline_template.py  composable-pipeline-template.py  detection-window.py  hello-world-explicit.py  hello-world.py  safety-monitoring.py
examples/shared/: __init__.py  perception_flows.py  perception_lib.py  perception_runtime.py
examples/tutorial/: 000_basic_flow.py  001_clock_types.py  002_adapter_connection.py  003_context_graph.py  004_ir_validation.py  005_execution_build.py  006_rt_execution.py  007_full_pipeline.py  008_dora_simple.py  009_dora_perception.py  010_request_response.py  011_debug_stepper.py  012_debug_perception_stepper.py  013_debug_perception_stepper_real_camera.py  014_record_replay_perception.py  015_buffer_engine_demo.py  016_closed_loop_env.py  017_pipeline_ergonomics.py  017_synchronization.py  018_registry_basics.py  019_registry_ecosystem.py  020_multirate_window.py  021_unified_wrapper.py  022_symbolic_planning.py  023_peripheral.py  README.md  __init__.py  _p0_utils.py
notebooks/src/: flow_fundamentals.py  standard_types.py  step_debug_replay.py  time_and_sync.py  using_the_hub.py
retriever/core/: pipeline_registry.py  plugins.py  registry.py  symbolic_structs.py
scripts/: export_notebook_ready.py  package_dist.py  retriever  run_p0_release_readiness.sh  validate_flow_typing.py
scripts/docs/: export_notebook_ready.py  hybrid_docs_convert.py  render_tutorial_graph.py  revert_frontmatter.py  sync_notebooks.py
scripts/quality/: validate_flow_typing.py
scripts/release/: check_public_surfaces.py  configure_cloudflare_domains.py  package_dist.py  run_p0_release_readiness.sh
src/retriever/: __init__.py  cli.py  config.py  error.py  flow_registry.py  pipeline_registry.py  recording.py  types_registry.py  utils.py
support/: perception_runtime.py
tests/: test_adapter_reset.py  test_adapter_reset_rt.py  test_bilevel_coordination.py  test_control.py  test_control_rt.py  test_control_web.py  test_dora_compilation.py  test_dora_translation.py  test_migrated_modules.py  test_migrated_modules_rt.py  test_output_capture_rt.py  test_temporal.py  test_type_system.py  test_type_system_rt.py
tests/core/: test_adapters_structured.py  test_adapters_structured_rt.py  test_authoring_regressions_rt.py  test_buffer_engine_rt.py  test_cli_pixi_wrapper_rt.py  test_closed_loop_cycle_ir_rt.py  test_context_config_rt.py  test_data_spec_event_core_rt.py  test_data_spec_eventbuffer_interop_rt.py  test_data_spec_manifest_and_lerobot_rt.py  test_data_spec_multistream_event_time_rt.py  test_data_spec_processing_profile_rt.py  test_dora_engine_rt.py  test_dora_native_override_rt.py  test_dora_serde_rt.py  test_dora_telemetry_rt.py  test_effectful_executor.py  test_event_buffer_subclass.py  test_executor.py  test_flow.py  test_flow_executor.py  test_flow_integration.py  test_flow_modern.py  test_flow_modern_rt.py  test_flow_typing_contract_rt.py  test_flow_typing_validator_script.py  test_frp_merge_rt.py  test_hub_cache_rt.py  test_hub_check_rt.py  test_hub_loader_rt.py  test_hub_ref_rt.py  test_hub_use_rt.py  test_ir_compiler_rt.py  test_ir_execution_rt.py  test_ir_structure_validation_rt.py  test_language_type_surface_rt.py  test_perception_type_surface_rt.py  test_pipeline_authoring_rt.py  test_pipeline_registry_rt.py  test_pipeline_step_rt.py  (+13 more)
(+312 files in other folders)
